--- a/archives/toutiao-search/2024-02-23.md
+++ b/archives/toutiao-search/2024-02-23.md
@@ -1,60 +1,74 @@
 # 2024-02-23
 
-共 109 条
+共 120 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Feb 23 2024 08:24:52 GMT+0800 (China Standard Time) -->
-1. [撞桥事故遇难司机家属发声](https://so.toutiao.com/search?keyword=撞桥事故遇难司机家属发声)
+<!-- 最后更新时间 Fri Feb 23 2024 09:36:58 GMT+0800 (China Standard Time) -->
+1. [被撞断大桥去年刚完成加固](https://so.toutiao.com/search?keyword=被撞断大桥去年刚完成加固)
 1. [方正证券回应女员工与男领导通奸](https://so.toutiao.com/search?keyword=方正证券回应女员工与男领导通奸)
 1. [寒潮中他们坚守岗位](https://so.toutiao.com/search?keyword=寒潮中他们坚守岗位)
+1. [3D还原广州沥心沙大桥被撞断](https://so.toutiao.com/search?keyword=3D还原广州沥心沙大桥被撞断)
+1. [遇难公交司机凌晨4点工作到晚7点](https://so.toutiao.com/search?keyword=遇难公交司机凌晨4点工作到晚7点)
 1. [娃哈哈创始人宗庆后在ICU救治](https://so.toutiao.com/search?keyword=娃哈哈创始人宗庆后在ICU救治)
-1. [高合创始人丁磊现身上海总部](https://so.toutiao.com/search?keyword=高合创始人丁磊现身上海总部)
 1. [广州沥心沙大桥事故已致5死](https://so.toutiao.com/search?keyword=广州沥心沙大桥事故已致5死)
-1. [男子野外烤糍粑引发山火](https://so.toutiao.com/search?keyword=男子野外烤糍粑引发山火)
-1. [官方通报2.2亿彩票事件](https://so.toutiao.com/search?keyword=官方通报2.2亿彩票事件)
-1. [撞桥事故中坠桥货车司机捡回一命](https://so.toutiao.com/search?keyword=撞桥事故中坠桥货车司机捡回一命)
-1. [郑州公租房可以买卖了？假的](https://so.toutiao.com/search?keyword=郑州公租房可以买卖了？假的)
-1. [旅客坐飞机拍下贵州山火](https://so.toutiao.com/search?keyword=旅客坐飞机拍下贵州山火)
-1. [大桥被船撞击瞬间画面](https://so.toutiao.com/search?keyword=大桥被船撞击瞬间画面)
+1. [被拜登脏话辱骂 普京回应嘲讽拉满](https://so.toutiao.com/search?keyword=被拜登脏话辱骂+普京回应嘲讽拉满)
 1. [学者梳理2.2亿彩票大奖四大疑问](https://so.toutiao.com/search?keyword=学者梳理2.2亿彩票大奖四大疑问)
+1. [撞桥事故遇难司机家属发声](https://so.toutiao.com/search?keyword=撞桥事故遇难司机家属发声)
+1. [旅客坐飞机拍下贵州山火](https://so.toutiao.com/search?keyword=旅客坐飞机拍下贵州山火)
+1. [老师与学生教室接吻？涉事学校辟谣](https://so.toutiao.com/search?keyword=老师与学生教室接吻？涉事学校辟谣)
+1. [大桥被船撞击瞬间画面](https://so.toutiao.com/search?keyword=大桥被船撞击瞬间画面)
 1. [贵州山火为何难扑灭](https://so.toutiao.com/search?keyword=贵州山火为何难扑灭)
-1. [女生用兔耳朵将表演团队节奏带偏](https://so.toutiao.com/search?keyword=女生用兔耳朵将表演团队节奏带偏)
-1. [甘肃网红“杨老二”去世 年仅39岁](https://so.toutiao.com/search?keyword=甘肃网红“杨老二”去世+年仅39岁)
-1. [为何近日贵州山火频发](https://so.toutiao.com/search?keyword=为何近日贵州山火频发)
-1. [华为Pocket 2折叠屏手机发布](https://so.toutiao.com/search?keyword=华为Pocket+2折叠屏手机发布)
-1. [撞桥肇事船为何不走中间主航道](https://so.toutiao.com/search?keyword=撞桥肇事船为何不走中间主航道)
-1. [外甥正月理发舅舅去世 舅妈索赔](https://so.toutiao.com/search?keyword=外甥正月理发舅舅去世+舅妈索赔)
 1. [偶遇福建游神小太子](https://so.toutiao.com/search?keyword=偶遇福建游神小太子)
-1. [疑坠桥公交车现场照片曝光](https://so.toutiao.com/search?keyword=疑坠桥公交车现场照片曝光)
-1. [游客预订民宿被老板给别人还遭威胁](https://so.toutiao.com/search?keyword=游客预订民宿被老板给别人还遭威胁)
-1. [克宫回应拜登称普京为“疯狂混蛋”](https://so.toutiao.com/search?keyword=克宫回应拜登称普京为“疯狂混蛋”)
-1. [姚明看到杨瀚森隔扣直接乐开了花](https://so.toutiao.com/search?keyword=姚明看到杨瀚森隔扣直接乐开了花)
+1. [撞桥事故中坠桥货车司机捡回一命](https://so.toutiao.com/search?keyword=撞桥事故中坠桥货车司机捡回一命)
+1. [男子野外烤糍粑引发山火](https://so.toutiao.com/search?keyword=男子野外烤糍粑引发山火)
+1. [高合创始人丁磊现身上海总部](https://so.toutiao.com/search?keyword=高合创始人丁磊现身上海总部)
+1. [外甥正月理发舅舅去世 舅妈索赔](https://so.toutiao.com/search?keyword=外甥正月理发舅舅去世+舅妈索赔)
 1. [猎冰导演：用姚安娜与华为无关](https://so.toutiao.com/search?keyword=猎冰导演：用姚安娜与华为无关)
-1. [小米14 Ultra正式发布](https://so.toutiao.com/search?keyword=小米14+Ultra正式发布)
-1. [熊猫花花被遗忘外场 饲养员被解雇](https://so.toutiao.com/search?keyword=熊猫花花被遗忘外场+饲养员被解雇)
+1. [疑坠桥公交车现场照片曝光](https://so.toutiao.com/search?keyword=疑坠桥公交车现场照片曝光)
+1. [官方通报2.2亿彩票事件](https://so.toutiao.com/search?keyword=官方通报2.2亿彩票事件)
+1. [克宫回应拜登称普京为“疯狂混蛋”](https://so.toutiao.com/search?keyword=克宫回应拜登称普京为“疯狂混蛋”)
+1. [华为Pocket 2折叠屏手机发布](https://so.toutiao.com/search?keyword=华为Pocket+2折叠屏手机发布)
+1. [梅德韦杰夫放话：会打到基辅](https://so.toutiao.com/search?keyword=梅德韦杰夫放话：会打到基辅)
+1. [高叶包文婧与张颂文演夫妻表现对比](https://so.toutiao.com/search?keyword=高叶包文婧与张颂文演夫妻表现对比)
+1. [姚明看到杨瀚森隔扣直接乐开了花](https://so.toutiao.com/search?keyword=姚明看到杨瀚森隔扣直接乐开了花)
 1. [人民网评网红扮赵世子](https://so.toutiao.com/search?keyword=人民网评网红扮赵世子)
-1. [英伟达市值一夜暴增近2万亿元](https://so.toutiao.com/search?keyword=英伟达市值一夜暴增近2万亿元)
+1. [撞桥肇事船为何不走中间主航道](https://so.toutiao.com/search?keyword=撞桥肇事船为何不走中间主航道)
+1. [小米14 Ultra正式发布](https://so.toutiao.com/search?keyword=小米14+Ultra正式发布)
 1. [余承东：Pocket 2像直板机一样平整](https://so.toutiao.com/search?keyword=余承东：Pocket+2像直板机一样平整)
-1. [专家：2024-2025年楼市压力很大](https://so.toutiao.com/search?keyword=专家：2024-2025年楼市压力很大)
-1. [贵州省委原书记孙志刚被决定逮捕](https://so.toutiao.com/search?keyword=贵州省委原书记孙志刚被决定逮捕)
-1. [禁止机构做空A股？证监会回应](https://so.toutiao.com/search?keyword=禁止机构做空A股？证监会回应)
-1. [妈妈做双手“固定器”让娃乖乖喝奶](https://so.toutiao.com/search?keyword=妈妈做双手“固定器”让娃乖乖喝奶)
-1. [卢伟冰小米发布会首秀：不怼友商](https://so.toutiao.com/search?keyword=卢伟冰小米发布会首秀：不怼友商)
-1. [女子捡到国家二级保护动物](https://so.toutiao.com/search?keyword=女子捡到国家二级保护动物)
+1. [男子酒后踩2米高跷表演“醉关公”](https://so.toutiao.com/search?keyword=男子酒后踩2米高跷表演“醉关公”)
+1. [甘肃网红“杨老二”去世 年仅39岁](https://so.toutiao.com/search?keyword=甘肃网红“杨老二”去世+年仅39岁)
+1. [哈马斯：加沙停火谈判有望取得突破](https://so.toutiao.com/search?keyword=哈马斯：加沙停火谈判有望取得突破)
+1. [英伟达市值一夜暴增近2万亿元](https://so.toutiao.com/search?keyword=英伟达市值一夜暴增近2万亿元)
+1. [《南来北往》马燕自称怀孕](https://so.toutiao.com/search?keyword=《南来北往》马燕自称怀孕)
+1. [小孩姐整顿聚餐翻菜](https://so.toutiao.com/search?keyword=小孩姐整顿聚餐翻菜)
 1. [学者：民进党在台立法机构锐气尽失](https://so.toutiao.com/search?keyword=学者：民进党在台立法机构锐气尽失)
 1. [快递新规会导致快递员离职潮吗](https://so.toutiao.com/search?keyword=快递新规会导致快递员离职潮吗)
+1. [考虑解禁日本水产品？外交部回应](https://so.toutiao.com/search?keyword=考虑解禁日本水产品？外交部回应)
+1. [交警推车时被车轮下防滑垫冲击摔倒](https://so.toutiao.com/search?keyword=交警推车时被车轮下防滑垫冲击摔倒)
+1. [禁止机构做空A股？证监会回应](https://so.toutiao.com/search?keyword=禁止机构做空A股？证监会回应)
+1. [亚冠：利雅得新月总比分6-2进8强](https://so.toutiao.com/search?keyword=亚冠：利雅得新月总比分6-2进8强)
+1. [周鸿祎称已拜俞敏洪为师](https://so.toutiao.com/search?keyword=周鸿祎称已拜俞敏洪为师)
+1. [妈妈做双手“固定器”让娃乖乖喝奶](https://so.toutiao.com/search?keyword=妈妈做双手“固定器”让娃乖乖喝奶)
+1. [山航回应大雪中硬核起飞](https://so.toutiao.com/search?keyword=山航回应大雪中硬核起飞)
+1. [媒体：台方须交代渔船事件真相](https://so.toutiao.com/search?keyword=媒体：台方须交代渔船事件真相)
+1. [中国人四年存了58.24万亿元](https://so.toutiao.com/search?keyword=中国人四年存了58.24万亿元)
+1. [湖北襄阳一社区书记土法除雪](https://so.toutiao.com/search?keyword=湖北襄阳一社区书记土法除雪)
+1. [路面结冰狗狗爬不上坡扭头走了](https://so.toutiao.com/search?keyword=路面结冰狗狗爬不上坡扭头走了)
+1. [郑州公租房可以买卖了？假的](https://so.toutiao.com/search?keyword=郑州公租房可以买卖了？假的)
+1. [女生用兔耳朵将表演团队节奏带偏](https://so.toutiao.com/search?keyword=女生用兔耳朵将表演团队节奏带偏)
+1. [为何近日贵州山火频发](https://so.toutiao.com/search?keyword=为何近日贵州山火频发)
+1. [游客预订民宿被老板给别人还遭威胁](https://so.toutiao.com/search?keyword=游客预订民宿被老板给别人还遭威胁)
+1. [熊猫花花被遗忘外场 饲养员被解雇](https://so.toutiao.com/search?keyword=熊猫花花被遗忘外场+饲养员被解雇)
+1. [专家：2024-2025年楼市压力很大](https://so.toutiao.com/search?keyword=专家：2024-2025年楼市压力很大)
+1. [贵州省委原书记孙志刚被决定逮捕](https://so.toutiao.com/search?keyword=贵州省委原书记孙志刚被决定逮捕)
+1. [卢伟冰小米发布会首秀：不怼友商](https://so.toutiao.com/search?keyword=卢伟冰小米发布会首秀：不怼友商)
+1. [女子捡到国家二级保护动物](https://so.toutiao.com/search?keyword=女子捡到国家二级保护动物)
 1. [央媒评拍违章车获1500元奖金](https://so.toutiao.com/search?keyword=央媒评拍违章车获1500元奖金)
 1. [武汉不到3天气温从27℃降至0℃以下](https://so.toutiao.com/search?keyword=武汉不到3天气温从27℃降至0℃以下)
-1. [考虑解禁日本水产品？外交部回应](https://so.toutiao.com/search?keyword=考虑解禁日本水产品？外交部回应)
-1. [湖北襄阳一社区书记土法除雪](https://so.toutiao.com/search?keyword=湖北襄阳一社区书记土法除雪)
-1. [中国人四年存了58.24万亿元](https://so.toutiao.com/search?keyword=中国人四年存了58.24万亿元)
-1. [《南来北往》马燕自称怀孕](https://so.toutiao.com/search?keyword=《南来北往》马燕自称怀孕)
 1. [宁波毕洽会上的高薪工作](https://so.toutiao.com/search?keyword=宁波毕洽会上的高薪工作)
-1. [路面结冰狗狗爬不上坡扭头走了](https://so.toutiao.com/search?keyword=路面结冰狗狗爬不上坡扭头走了)
 1. [媒体评民进党当局荒诞行径](https://so.toutiao.com/search?keyword=媒体评民进党当局荒诞行径)
 1. [多家银行密集下调存款利率](https://so.toutiao.com/search?keyword=多家银行密集下调存款利率)
 1. [宿迁一医院大厅垮塌：曾获鲁班奖](https://so.toutiao.com/search?keyword=宿迁一医院大厅垮塌：曾获鲁班奖)
-1. [被撞断大桥去年刚完成加固](https://so.toutiao.com/search?keyword=被撞断大桥去年刚完成加固)
 1. [胡锡进：台“海巡署”言论充满漏洞](https://so.toutiao.com/search?keyword=胡锡进：台“海巡署”言论充满漏洞)
 1. [撞桥船只驾驶人最高或判7年以上](https://so.toutiao.com/search?keyword=撞桥船只驾驶人最高或判7年以上)
 1. [乘务员餐车吃饭被乘客怒怼](https://so.toutiao.com/search?keyword=乘务员餐车吃饭被乘客怒怼)
@@ -83,7 +97,6 @@
 1. [网上发盗版电影涉嫌触犯法律](https://so.toutiao.com/search?keyword=网上发盗版电影涉嫌触犯法律)
 1. [法大使：与俄接壤北约国家或有战争](https://so.toutiao.com/search?keyword=法大使：与俄接壤北约国家或有战争)
 1. [贷款买房的窗口期是否到来](https://so.toutiao.com/search?keyword=贷款买房的窗口期是否到来)
-1. [男子酒后踩2米高跷表演“醉关公”](https://so.toutiao.com/search?keyword=男子酒后踩2米高跷表演“醉关公”)
 1. [车放家门口被路上漂来的车飞速撞上](https://so.toutiao.com/search?keyword=车放家门口被路上漂来的车飞速撞上)
 1. [美高官声称“中国两头得利”遭驳斥](https://so.toutiao.com/search?keyword=美高官声称“中国两头得利”遭驳斥)
 1. [沪指创三年半以来最长连涨纪录](https://so.toutiao.com/search?keyword=沪指创三年半以来最长连涨纪录)
@@ -107,10 +120,8 @@
 1. [涉事船员操作失当引发大桥事故](https://so.toutiao.com/search?keyword=涉事船员操作失当引发大桥事故)
 1. [广州三民岛各中小学已启动线上教学](https://so.toutiao.com/search?keyword=广州三民岛各中小学已启动线上教学)
 1. [男子高铁上被邻座大哥“投喂”](https://so.toutiao.com/search?keyword=男子高铁上被邻座大哥“投喂”)
-1. [周鸿祎称已拜俞敏洪为师](https://so.toutiao.com/search?keyword=周鸿祎称已拜俞敏洪为师)
 1. [高合汽车：正全力采取各种纾困举措](https://so.toutiao.com/search?keyword=高合汽车：正全力采取各种纾困举措)
 1. [张颂文新剧首播口碑](https://so.toutiao.com/search?keyword=张颂文新剧首播口碑)
 1. [女生遇到心仪男生下车要微信](https://so.toutiao.com/search?keyword=女生遇到心仪男生下车要微信)
-1. [小孩姐整顿聚餐翻菜](https://so.toutiao.com/search?keyword=小孩姐整顿聚餐翻菜)
 1. [巴西总统怒批以色列引发连锁反应](https://so.toutiao.com/search?keyword=巴西总统怒批以色列引发连锁反应)
 <!-- END TOUTIAO -->
